--- a/.github/workflows/deploy-ftp.yml
+++ b/.github/workflows/deploy-ftp.yml
@@ -26,9 +26,11 @@ jobs:
           FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
           FTP_REMOTE_DIR: ${{ secrets.FTP_REMOTE_DIR }}
         run: |
-          lftp -u "$FTP_USERNAME","$FTP_PASSWORD" "$FTP_HOST" << EOF
-          set ftp:ssl-allow true
-          set ftp:list-options -a
+          lftp -u "$FTP_USERNAME","$FTP_PASSWORD" "$FTP_HOST" << EOFset cmd:fail-exit true;
+          set net:max-retries 1;
+          set net:timeout 20;
+          set ftp:passive-mode yes;
+          set ftp:list-options -a;
           cd "$FTP_REMOTE_DIR"
           # Verwijder alle bestanden/mappen behalve:
           #   .htaccess, .htpasswd, *.json, *.sqlite
@@ -45,7 +47,7 @@ jobs:
           FTP_REMOTE_DIR: ${{ secrets.FTP_REMOTE_DIR }}
         run: |
           lftp -u "$FTP_USERNAME","$FTP_PASSWORD" "$FTP_HOST" << EOF
-          set ftp:ssl-allow true
+          set ftp:passive-mode yes;
           cd "$FTP_REMOTE_DIR"
           mirror -R ./web .
           bye
