--- a/.github/workflows/deploy-ftp.yml
+++ b/.github/workflows/deploy-ftp.yml
@@ -27,6 +27,7 @@ jobs:
           FTP_REMOTE_DIR: ${{ secrets.FTP_REMOTE_DIR }}
         run: |
           lftp -u "$FTP_USERNAME","$FTP_PASSWORD" "$FTP_HOST" << EOFset cmd:fail-exit true;
+          set debug 3;
           set net:max-retries 1;
           set net:timeout 20;
           set ftp:passive-mode yes;
@@ -47,6 +48,7 @@ jobs:
           FTP_REMOTE_DIR: ${{ secrets.FTP_REMOTE_DIR }}
         run: |
           lftp -u "$FTP_USERNAME","$FTP_PASSWORD" "$FTP_HOST" << EOF
+          set debug 3;
           set ftp:passive-mode yes;
           cd "$FTP_REMOTE_DIR"
           mirror -R ./web .
