--- a/.github/workflows/deploy-ftp.yml
+++ b/.github/workflows/deploy-ftp.yml
@@ -18,6 +18,19 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y lftp
 
+      - name: Debug env
+        run: |
+          echo "Host: $FTP_HOST"
+          echo "User: $FTP_USERNAME"
+          # echo "Pass: $FTP_PASSWORD"  # liever niet loggen 😉
+          echo "Remote dir: $FTP_REMOTE_DIR"
+        env:
+          FTP_HOST: ${{ secrets.FTP_HOST }}
+          FTP_USERNAME: ${{ secrets.FTP_USERNAME }}
+          FTP_PASSWORD: ${{ secrets.FTP_PASSWORD }}
+          FTP_REMOTE_DIR: ${{ secrets.FTP_REMOTE_DIR }}
+
+
       # Stap 1: alles op de server opruimen behalve .htaccess, .htpasswd, *.json, *.sqlite
       - name: Clean remote directory (preserve config & db)
         env:
