--- a/.github/workflows/deploy-ftp.yml
+++ b/.github/workflows/deploy-ftp.yml
@@ -40,17 +40,18 @@ jobs:
           FTP_REMOTE_DIR: ${{ secrets.FTP_REMOTE_DIR }}
         run: |
           lftp -u "$FTP_USERNAME","$FTP_PASSWORD" "$FTP_HOST" << EOF
-          set cmd:fail-exit true;
-          set net:max-retries 1;
-          set net:timeout 20;
-          set ftp:passive-mode yes;
-          set ftp:list-options -a;
+          set cmd:fail-exit true
+          set net:max-retries 1
+          set net:timeout 20
+          set ftp:ssl-allow false
+          set ftp:passive-mode yes
+          set ftp:list-options -a
+      
           cd "$FTP_REMOTE_DIR"
-          # Verwijder alle bestanden/mappen behalve:
-          #   .htaccess, .htpasswd, *.json, *.sqlite
           glob -a -X .htaccess -X .htpasswd -X *.json -X *.sqlite rm -rf *
           bye
           EOF
+
 
       # Stap 2: inhoud van ./web uploaden naar remote directory
       - name: Upload web/ to FTP
@@ -61,8 +62,14 @@ jobs:
           FTP_REMOTE_DIR: ${{ secrets.FTP_REMOTE_DIR }}
         run: |
           lftp -u "$FTP_USERNAME","$FTP_PASSWORD" "$FTP_HOST" << EOF
-          set ftp:passive-mode yes;
+          set cmd:fail-exit true
+          set net:max-retries 1
+          set net:timeout 20
+          set ftp:ssl-allow false
+          set ftp:passive-mode yes
+      
           cd "$FTP_REMOTE_DIR"
           mirror -R ./web .
           bye
           EOF
+
